--- a/DotNetCoreSqlDb/appsettings.json
+++ b/DotNetCoreSqlDb/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MyDbConnection": "Data Source=msdocs-core-sql-wdy-server.database.windows.net,1433;Initial Catalog=msdocs-core-sql-wdy-database;User ID=msdocs-core-sql-wdy-server-admin;Password=62OCV32H3DNU848G$"
+    "AZURE_SQL_CONNECTIONSTRING": ""Server=(localdb)\\mssqllocaldb;Trusted_Connection=True;MultipleActiveResultSets=true""
   }
 }
